fix card title alignment

--- a/css/index.css
+++ b/css/index.css
@@ -250,6 +250,8 @@ img {
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
 }
 .card .card-title {
+  display: flex;
+  align-items: center;
   font-size: 1.5rem;
   padding-bottom: 1rem;
   font-weight: bold;
