--- a/eryngi/components/_card.scss
+++ b/eryngi/components/_card.scss
@@ -7,6 +7,8 @@
   box-shadow: $base-box-shadow;
 
   .card-title {
+    display: flex;
+    align-items: center;
     font-size: $font-size-lg;
     padding-bottom: $base-padding;
     font-weight: bold;
